Fix CodeBoxPaneItem pane display issues

--- a/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
+++ b/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
@@ -35,12 +35,12 @@
                                                     UpdateSourceTrigger=PropertyChanged}"
                                      x:Name="textSource" AcceptsReturn="True" TextWrapping="Wrap"
                                      Background="Transparent" BorderThickness="0" 
-                                             ScrollViewer.HorizontalScrollBarVisibility="Auto" 
+                                             ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
                              ScrollViewer.VerticalScrollBarVisibility="Auto"
                                      Panel.ZIndex="2" />
                                     <TextBox Text="{TemplateBinding Tag}" Background="{TemplateBinding Background}" 
                                              AcceptsReturn="True" Panel.ZIndex="1" BorderThickness="0" TextWrapping="Wrap"
-                                              ScrollViewer.HorizontalScrollBarVisibility="Auto" 
+                                              ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
                              ScrollViewer.VerticalScrollBarVisibility="Auto">
                                         <TextBox.Style>
                                             <Style TargetType="{x:Type TextBox}">
@@ -63,14 +63,7 @@
             </Style>
         </ResourceDictionary>
     </UserControl.Resources>
-    <Grid x:Name="grid" ClipToBounds="True" Background="Transparent">
-        <Grid.ToolTip>
-            <StackPanel>
-                <TextBlock x:Name="toolTipName" FontWeight="Bold" FontSize="14" Margin="0,0,0,5" MaxWidth="400" TextWrapping="Wrap"/>
-                <Border BorderBrush="Silver" BorderThickness="0,1,0,0" Margin="0,8" />
-                <TextBlock x:Name="toolTipBody"/>
-            </StackPanel>
-        </Grid.ToolTip>
+    <Grid x:Name="grid" ClipToBounds="True" Background="Transparent" Height="97" Margin="0,0,-3,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition x:Name="col1" Width="3" MaxWidth="5"/>
             <ColumnDefinition x:Name="col2" Width="210" MaxWidth="210"/>
@@ -79,21 +72,21 @@
         </Grid.ColumnDefinitions>
         <Grid x:Name="canvas" Grid.Column="1" MaxWidth="225">
             <Grid.RowDefinitions>
-                <RowDefinition Height="11*"/>
-                <RowDefinition/>
+                <RowDefinition Height="95*"/>
+                <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
             <TextBox x:Name="codeTextBox" Style="{StaticResource TextBoxWithPlaceHolder}" 
                              Text="{Binding Path=Text, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Padding="2 2 2 2"
                              TextWrapping="Wrap" FontSize="12" Tag="Enter your code here..."
-                             AcceptsReturn="True" Margin="0,5,0,0" MinHeight="30" VerticalAlignment="Top"/>
+                             AcceptsReturn="True" Margin="0,5,1,0" Height="68" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto"/>
             <RadioButton x:Name="isFile" Content="File"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="47,36,120,11" ToolTip="Check to use a file path for the code snippet."
+                     FontSize="10" Margin="48,78,119,0" ToolTip="Check to use a file path for the code snippet."
                      Checked="IsFile_Checked"/>
             <RadioButton x:Name="isText" Content="Text"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="0,36,163,11" ToolTip="Check to use a user input text for the code snippet."
+                     FontSize="10" Margin="0,78,163,0" ToolTip="Check to use a user input text for the code snippet."
                      Checked="IsText_Checked"/>
             <RadioButton x:Name="isURL" Content="URL"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="90,36,73,11" ToolTip="Check to use a URL for the code snippet." 
+                     FontSize="10" Margin="92,78,71,0" ToolTip="Check to use a URL for the code snippet." 
                      Checked="IsURL_Checked"/>
         </Grid>
         <Button x:Name="insertButton" Grid.Column="2" Margin="0,0,5,20" Click="InsertButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
