--- a/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
+++ b/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
@@ -89,7 +89,7 @@
                      FontSize="10" Margin="92,78,71,0" ToolTip="Check to use a URL for the code snippet." 
                      Checked="IsURL_Checked"/>
         </Grid>
-        <Button x:Name="insertButton" Grid.Column="2" Margin="0,0,5,20" Click="InsertButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+        <Button x:Name="insertButton" Grid.Column="2" Margin="0,3,5,60" Click="InsertButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
             <Image x:Name="insertCode" Source="pack://siteoforigin:,,,/Resources/SyncLabEditButton.png" Stretch="Fill"/>
             <Button.ToolTip>
                 <StackPanel>
@@ -101,7 +101,7 @@
                 </StackPanel>
             </Button.ToolTip>
         </Button>
-        <Button x:Name="deleteButton" Grid.Column="3" Margin="0,0,7,20" Click="DeleteButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+        <Button x:Name="deleteButton" Grid.Column="2" Margin="0,42,5,21" Click="DeleteButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
             <Image x:Name="deleteImage" Source="pack://siteoforigin:,,,/Resources/SyncLabDeleteButton.png" Stretch="Fill"/>
             <Button.ToolTip>
                 <StackPanel>
@@ -112,6 +112,26 @@
                     </TextBlock>
                 </StackPanel>
             </Button.ToolTip>
+        </Button>
+        <Button x:Name="moveUpButton" Grid.Column="3" Margin="0,3,5,60" Click="MoveUpButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+            <Button.ToolTip>
+                <StackPanel>
+                    <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5"><Run Text="Move Up"/></TextBlock>
+                    <Border BorderBrush="Silver" BorderThickness="0,1,0,0" Margin="0,8" />
+                    <TextBlock><Run Text="Moves the code box up by 1 position"/></TextBlock>
+                </StackPanel>
+            </Button.ToolTip>
+            <Image x:Name="moveUpImage" Source="pack://siteoforigin:,,,/Resources/icon-up.png" Stretch="Fill"/>
+        </Button>
+        <Button x:Name="moveDownButton" Grid.Column="3" Margin="0,42,5,21" Click="MoveDownButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+            <Button.ToolTip>
+                <StackPanel>
+                    <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5"><Run Text="Move Down"/></TextBlock>
+                    <Border BorderBrush="Silver" BorderThickness="0,1,0,0" Margin="0,8" />
+                    <TextBlock><Run Text="Moves the code box down by 1 position"/></TextBlock>
+                </StackPanel>
+            </Button.ToolTip>
+            <Image x:Name="moveDownImage" Source="pack://siteoforigin:,,,/Resources/icon-down.png" Stretch="Fill"/>
         </Button>
     </Grid>
 </UserControl>
