--- a/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
+++ b/PowerPointLabs/PowerPointLabs/LiveCodingLab/Views/CodeBoxPaneItem.xaml
@@ -66,9 +66,9 @@
     <Grid x:Name="grid" ClipToBounds="True" Background="Transparent" Height="97" Margin="0,0,-3,0">
         <Grid.ColumnDefinitions>
             <ColumnDefinition x:Name="col1" Width="3" MaxWidth="5"/>
-            <ColumnDefinition x:Name="col2" Width="210" MaxWidth="210"/>
-            <ColumnDefinition x:Name="col3" Width="32" MaxWidth="32"/>
-            <ColumnDefinition Width="32" MaxWidth="32"/>
+            <ColumnDefinition x:Name="col2" Width="200" MaxWidth="200"/>
+            <ColumnDefinition x:Name="col3" Width="30" MaxWidth="30"/>
+            <ColumnDefinition Width="30" MaxWidth="30"/>
         </Grid.ColumnDefinitions>
         <Grid x:Name="canvas" Grid.Column="1" MaxWidth="225">
             <Grid.RowDefinitions>
@@ -80,16 +80,16 @@
                              TextWrapping="Wrap" FontSize="12" Tag="Enter your code here..."
                              AcceptsReturn="True" Margin="0,5,1,0" Height="68" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto"/>
             <RadioButton x:Name="isFile" Content="File"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="48,78,119,0" ToolTip="Check to use a file path for the code snippet."
+                     FontSize="10" Margin="50,78,101,0" ToolTip="Check to use a file path for the code snippet."
                      Checked="IsFile_Checked"/>
             <RadioButton x:Name="isText" Content="Text"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="0,78,163,0" ToolTip="Check to use a user input text for the code snippet."
+                     FontSize="10" Margin="0,78,151,0" ToolTip="Check to use a user input text for the code snippet."
                      Checked="IsText_Checked"/>
             <RadioButton x:Name="isURL" Content="URL"  VerticalContentAlignment="Center" 
-                     FontSize="10" Margin="92,78,71,0" ToolTip="Check to use a URL for the code snippet." 
+                     FontSize="10" Margin="100,78,51,0" ToolTip="Check to use a URL for the code snippet." 
                      Checked="IsURL_Checked"/>
         </Grid>
-        <Button x:Name="insertButton" Grid.Column="2" Margin="0,3,5,60" Click="InsertButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+        <Button x:Name="insertButton" Grid.Column="2" Margin="0,3,2,60" Click="InsertButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
             <Image x:Name="insertCode" Source="pack://siteoforigin:,,,/Resources/SyncLabEditButton.png" Stretch="Fill"/>
             <Button.ToolTip>
                 <StackPanel>
@@ -101,7 +101,7 @@
                 </StackPanel>
             </Button.ToolTip>
         </Button>
-        <Button x:Name="deleteButton" Grid.Column="2" Margin="0,42,5,21" Click="DeleteButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+        <Button x:Name="deleteButton" Grid.Column="2" Margin="0,42,2,21" Click="DeleteButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
             <Image x:Name="deleteImage" Source="pack://siteoforigin:,,,/Resources/SyncLabDeleteButton.png" Stretch="Fill"/>
             <Button.ToolTip>
                 <StackPanel>
@@ -113,7 +113,8 @@
                 </StackPanel>
             </Button.ToolTip>
         </Button>
-        <Button x:Name="moveUpButton" Grid.Column="3" Margin="0,3,5,60" Click="MoveUpButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+        <Button x:Name="moveUpButton" Grid.Column="3" Margin="0,3,3,60" Click="MoveUpButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+            <Image x:Name="moveUpImage" Source="..\..\Resources\up_arrow.png" Stretch="Fill"/>
             <Button.ToolTip>
                 <StackPanel>
                     <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5"><Run Text="Move Up"/></TextBlock>
@@ -121,9 +122,9 @@
                     <TextBlock><Run Text="Moves the code box up by 1 position"/></TextBlock>
                 </StackPanel>
             </Button.ToolTip>
-            <Image x:Name="moveUpImage" Source="pack://siteoforigin:,,,/Resources/icon-up.png" Stretch="Fill"/>
         </Button>
-        <Button x:Name="moveDownButton" Grid.Column="3" Margin="0,42,5,21" Click="MoveDownButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+        <Button x:Name="moveDownButton" Grid.Column="3" Margin="0,42,3,21" Click="MoveDownButton_Click" HorizontalAlignment="Right" MinWidth="25" MaxWidth="25" MinHeight="25" MaxHeight="25" Style="{StaticResource ImageButtonStyle}" Width="25">
+            <Image x:Name="moveDownImage" Source="..\..\Resources\down_arrow.png" Stretch="Fill"/>
             <Button.ToolTip>
                 <StackPanel>
                     <TextBlock FontWeight="Bold" FontSize="14" Margin="0,0,0,5"><Run Text="Move Down"/></TextBlock>
@@ -131,7 +132,6 @@
                     <TextBlock><Run Text="Moves the code box down by 1 position"/></TextBlock>
                 </StackPanel>
             </Button.ToolTip>
-            <Image x:Name="moveDownImage" Source="pack://siteoforigin:,,,/Resources/icon-down.png" Stretch="Fill"/>
         </Button>
     </Grid>
 </UserControl>
